// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningsViews WarningsView displays nothing if no notifications 1`] = `<div />`;

exports[`WarningsViews WarningsView does displays a warning 1`] = `
<div>
  <div
    class="sc-jTzLTM kHMley"
  >
    <div
      class="sc-fjdhpX gFIdYO"
    >
      <div
        class="sc-jzJRlG cOrBFf"
      >
        <div
          class="sc-kgoBCf jNgdNK"
        >
          WARNING xx0
        </div>
        <h4
          class="sc-eNQAEJ fAbPPh"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-cSHVUG CAuLq"
      >
        <div
          class="sc-jzJRlG cOrBFf"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-cSHVUG CAuLq"
        >
          <pre
            class="sc-kEYyzF dXKHJM"
          >
            EXPLAIN MATCH xx3
            <br
              class="sc-hMqMXs cPxEnv"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsViews WarningsView does displays multiple warnings 1`] = `
<div>
  <div
    class="sc-jTzLTM kHMley"
  >
    <div
      class="sc-fjdhpX gFIdYO"
    >
      <div
        class="sc-jzJRlG cOrBFf"
      >
        <div
          class="sc-kgoBCf jNgdNK"
        >
          WARNING xx0
        </div>
        <h4
          class="sc-eNQAEJ fAbPPh"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-cSHVUG CAuLq"
      >
        <div
          class="sc-jzJRlG cOrBFf"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-cSHVUG CAuLq"
        >
          <pre
            class="sc-kEYyzF dXKHJM"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-hMqMXs cPxEnv"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
    <div
      class="sc-fjdhpX gFIdYO"
    >
      <div
        class="sc-jzJRlG cOrBFf"
      >
        <div
          class="sc-kgoBCf jNgdNK"
        >
          WARNING yy0
        </div>
        <h4
          class="sc-eNQAEJ fAbPPh"
        >
          My yy1 warning
        </h4>
      </div>
      <div
        class="sc-cSHVUG CAuLq"
      >
        <div
          class="sc-jzJRlG cOrBFf"
        >
          This is yy2 warning
        </div>
        <div
          class="sc-cSHVUG CAuLq"
        >
          <pre
            class="sc-kEYyzF dXKHJM"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-hMqMXs cPxEnv"
            />
               
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;
